# Invoice_Insight_Project

./: BUILD_AND_PACKAGE.md  CLEANUP_REPORT_20260104.md  COMPLETION_REPORT.md  COMPREHENSIVE_SUMMARY.md  CONFIG_INTEGRATION_GUIDE.md  CONFIG_SUMMARY.md  CONFIG_VALIDATION_GUIDE.md  CONFIG_VALIDATION_SUMMARY.md  DATABASE_DAO_CHECKLIST.md  DATABASE_DAO_COMPLETION_REPORT.md  DATABASE_DAO_DESIGN.md  DATABASE_DAO_INTEGRATION_GUIDE.md  DATABASE_DAO_QUICK_REFERENCE.md  DATABASE_DAO_SUMMARY.md  DEBUG_AND_PROGRESS_QUICKREF.md  DEBUG_FIX_SUMMARY.md  DEPENDENCIES.md  DEPENDENCIES_UPDATE_SUMMARY.md  DEPENDENCY_INJECTION_GUIDE.md  DEPLOYMENT.md  DETAIL_FORMAT_CHECK_FINAL_REPORT.md  DETAIL_VS_HEADER_COLUMN_ORDER.md  DETAIL_VS_HEADER_FORMAT_ANALYSIS.md  DOCUMENTATION_COMPLETION_SUMMARY.md  ENCODING_DETECTION_GUIDE.md  ENCODING_QUICK_START.md  ERROR_HANDLING_COMPLETION_REPORT.md  ERROR_HANDLING_INTEGRATION_GUIDE.md  ERROR_HANDLING_QUICK_REFERENCE.md  ETL存档说明_20260201.md  FINAL_DELIVERY_CHECKLIST.md  HEADER_COLUMN_REORDER_COMPLETION.md  HELP_MENU_UPDATE.md  IMPLEMENTATION_EXAMPLE_DAO.py  IMPLEMENTATION_SUMMARY.txt  LEDGER_FIX_EXECUTIVE_SUMMARY.md  LEDGER_MISSING_TABLES_ANALYSIS.md  LEDGER_MISSING_TABLES_FIX_REPORT.md  LOGGING_AND_PROGRESS_GUIDE.md  ODS_DETAIL_COLUMN_ORDER_ANALYSIS.md  (+71 more)
Outputs/: ODS_被去重的主表_HEADER_99_2026-02-01_09-19-06.xlsx  ODS_被去重的明细表_DETAIL_2026-02-01_09-17-55.xlsx  ODS_被去重的明细表_DETAIL_2026-02-01_15-40-40.xlsx  ODS_被去重的明细表_DETAIL_2026-02-01_15-44-27.xlsx  ODS_被去重的明细表_DETAIL_2026-02-01_15-45-50.xlsx  ODS_被去重的明细表_DETAIL_2026-02-01_15-47-47.xlsx  (+58 more)
code_reference/: ADS_TABLE.SQL  (+7 more)
(+82 files in other folders)
